// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders children 1`] = `
<View
  style={
    Object {
      "borderBottomWidth": 0,
      "borderColor": "#ddd",
      "borderRadius": 2,
      "borderWidth": 1,
      "elevation": 2,
      "marginLeft": 5,
      "marginRight": 5,
      "marginTop": 10,
      "paddingLeft": 4,
      "paddingRight": 4,
    }
  }
>
  <Test />
</View>
`;

exports[`Card renders correctly 1`] = `
<View
  style={
    Object {
      "borderBottomWidth": 0,
      "borderColor": "#ddd",
      "borderRadius": 2,
      "borderWidth": 1,
      "elevation": 2,
      "marginLeft": 5,
      "marginRight": 5,
      "marginTop": 10,
      "paddingLeft": 4,
      "paddingRight": 4,
    }
  }
/>
`;
